--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="wrapper">
       <header><i class="bx bx-left-arrow-alt"></i>Weather App</header>
       <section class="input-part">
-        <p class="info-txt">Please Enter a Valid City</p>
+        <p class="info-txt"></p>
         <input
           type="text"
           placeholder="Enter City Name"
@@ -26,25 +26,22 @@
         <button>Get Device Location</button>
       </section>
       <section class="weather-part">
-        <!-- <img
-          src="./weather-app-icons/Weather Icons/cloud.svg"
-          alt="Weather-Icon"
-        /> -->
+        <img src="#" alt="Weather-Icon" />
         <div class="temp">
-          <span class="numb">13</span>
+          <span class="numb">_</span>
           <span class="deg">°</span>C
         </div>
-        <div class="weather">Broken Clouds</div>
+        <div class="weather">_ _</div>
         <div class="location">
           <i class="bx bx-map"></i>
-          <span>Badlapur, Maharashtra</span>
+          <span>_, _</span>
         </div>
         <div class="bottom-details">
           <div class="column feels">
             <i class="bx bxs-thermometer"></i>
             <div class="details">
               <div class="temp">
-                <span class="numb">17</span>
+                <span class="numb-2">_</span>
                 <span class="deg">°</span>C
               </div>
               <p>Feels Like</p>
@@ -53,12 +50,13 @@
           <div class="column humidity">
             <i class="bx bxs-droplet-half"></i>
             <div class="details">
-              <span class="numb">84%</span>
+              <span>84%</span>
               <p>Humidity</p>
             </div>
           </div>
         </div>
       </section>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
